objects/Won_Lost_Analysis__c.object
<CustomObject>
    <description>R2.0-Won/Loss and Analysis On Opportunity</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Opportunity__r.Account.Sales_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description for reason selection</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incumbent_Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incumbent Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Won/Lost Analysis (Incumbent Competitor)</relationshipLabel>
        <relationshipName>Won_Lost_Analysis1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Owner_s_Business_Group__c</fullName>
        <formula>Opportunity__r.Business_Group2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Business Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Global_Business_Unit__c</fullName>
        <formula>Opportunity__r.Owner_s_Global_Business_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Global Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Capture Primary Partner from Opportunity</description>
        <label>Primary Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Won/Lost Analysis (Partner)</relationshipLabel>
        <relationshipName>Win_Loss_Analysis1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Capture Primary competitor from Account</description>
        <label>Primary Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Won/Lost Analysis (Incumbent Competitor)</relationshipLabel>
        <relationshipName>Win_Loss_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Sales_Stage__c</fullName>
        <description>To capture Prior SalesStage</description>
        <label>Prior Sales Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Selection_Options__c</fullName>
        <description>Definitions for Reason Selection Options</description>
        <label>Reason Selection Options</label>
        <picklist>
            <picklistValues>
                <fullName>Teaming / Partnering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terms &amp; Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution alignment and fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition plan and transformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Differentiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expertise &amp; knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timeliness / Responsiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursuit &amp; Sales team effectiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Engagement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT($User.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select__c</fullName>
        <inlineHelpText>Select 3 top reasons that apply. HP Won/Lost/Disengaged because</inlineHelpText>
        <label>Additional Won / Lost Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Teaming / Partnering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terms &amp; Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution alignment and fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition plan and transformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Differentiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expertise &amp; knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timeliness / Responsiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursuit &amp; Sales team effectiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive engagement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Selection__c</fullName>
        <description>Selection Option</description>
        <label>Selection</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Value__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Won_Lost_Date__c</fullName>
        <description>To Capture Won/Lost Date</description>
        <label>Won/Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Won_Lost_Reasons__c</fullName>
        <formula>TEXT( Opportunity__r.Win_Loss_Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Won/Lost Reasons</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Provide_any_comments_or_elaborate__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X3_What_went_well__c</fullName>
        <description>In looking back across the entire procurement, what went especially well during this pursuit from an HP perspective that we should try to replicate in future opportunities?</description>
        <inlineHelpText>In looking back across the entire procurement, what went especially well during this pursuit from an HP perspective that we should try to replicate in future opportunities?</inlineHelpText>
        <label>What went well?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X4_Where_can_we_improve__c</fullName>
        <description>4.  In looking back across the entire procurement, are there any areas for improvement for HP?</description>
        <inlineHelpText>4.  In looking back across the entire procurement, are there any areas for improvement for HP?</inlineHelpText>
        <label>Where can we improve?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Won/Lost Analysis</label>
    <nameField>
        <displayFormat>WL-{00000000}</displayFormat>
        <label>Won/Lost Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Won/Lost Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Choose_three_reasons</fullName>
        <active>true</active>
        <errorConditionFormula>IF(INCLUDES( Select__c , &quot;Teaming / Partnering&quot;),1,0) + 
IF(INCLUDES( Select__c , &quot;Client relationship&quot;),1,0) + 
IF(INCLUDES( Select__c , &quot;Value proposition&quot;),1,0) + 
IF(INCLUDES( Select__c , &quot;Terms &amp; Conditions&quot;),1,0) + 
IF(INCLUDES( Select__c , &quot;Solution alignment and fit&quot;),1,0) + 
IF(INCLUDES( Select__c , &quot;Transition plan and transformation&quot;),1,0) + 
IF(INCLUDES( Select__c , &quot;Competitive pricing&quot;),1,0) +
IF(INCLUDES( Select__c , &quot;Differentiation&quot;),1,0) +
IF(INCLUDES( Select__c , &quot;Expertise &amp; knowledge&quot;),1,0) + 
IF(INCLUDES( Select__c , &quot;Timeliness / Responsiveness&quot;),1,0) + 
IF(INCLUDES( Select__c , &quot;Pursuit &amp; Sales team effectiveness&quot;),1,0) +
IF(INCLUDES( Select__c , &quot;Delivery Team&quot;),1,0) + 
IF(INCLUDES( Select__c , &quot;Executive engagement&quot;),1,0) &gt; 3</errorConditionFormula>
        <errorMessage>Please select only 3 reasons</errorMessage>
    </validationRules>
</CustomObject>